# fpga-digital-recognition

./: .gitignore  MLP_README.md  SWORD_user_manual.md  VIVADO_RUN_MANUAL.md  goal.md  pyproject.toml  templates.hex
.claude/plans/: you-re-an-orchestrator-we-re-steady-mango.md
artifacts/mlp/: b1_int32.hex  b2_hw_int32.hex  b2_int32.hex  fixed_point_metrics.json  metrics.json  mlp_hw_config.vh  mnist_mlp.pt  quantization.json  w1_int8.hex  w2_int8.hex  weights_float.npz  weights_quantized.npz
artifacts/mlp/test_vectors/: canvas_nibbles.hex  expected_digits.hex  labels.hex
constrs_1/: Kintex-7.xdc  vga.xdc
scripts/: draw_verify.py  evaluate_mlp.py  gen_templates.py  mlp_common.py  train_mlp.py  verify_fixed_point_mlp.py
sim_1/: tb_matcher.v  tb_mlp_engine.v  tb_recognizer_fsm.v
source_1/: Anti_jitter.v  DisplayNumber.v  button_matrix.v  canvas_ram.v  clkdiv.v  draw_ctrl.v  matcher.v  mlp_engine.v  recognizer_fsm.v  seg7_driver.v  template_rom.v  top.v  vga.v  vga_render.v
